--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "console.table": "^0.10.0",
     "express": "^4.17.1",
     "inquirer": "^8.1.1",
-    "mysql2": "^2.2.5"
+    "mysql2": "^2.2.5",
+    "prettier": "^2.3.1"
   }
 }
